# tinygamesvr

./: .clang-format  .code-workspace  .gitignore  .gitmodules  CMakeLists.txt  README.md  WORKSPACE  make.py
.github/workflows/: pylint.yml
common/: CommonSetup.cmake  common_build_vars.bzl
common/base/uuid/: endianness.h  uid_helper.cpp  uid_helper.h  uuid_v4.h
common/framework/: base_rpc_object.h  rpc_common.h
common/framework/rpc/: base_rpc_object.h  rpc_common.h  rpc_service_registry.cpp  rpc_service_registry.h
common/framework/server/: server_base.cpp  server_base.h
common/framework/zmq/: zmq.hpp
common/helper/: singleton.h  stat_helper.h
common/log/: log.cpp  log.h
common/marco/: marco.h
common/mongo/: mongo.h
common/redis/: redis.h
common/time/: server_time.h
doc/: env.md
golang/cloud/: go.mod  go.sum
golang/cloud/cmd/activitysvr/: main.go
golang/cloud/cmd/goclient/: main.go
golang/cloud/internal/pkg/redis/: redis.go  redis_test.go
golang/cloud/test/vulcan/: main.go  register.go
golang/cloud/test/vulcan/base/: base.go  manager.go
golang/cloud/test/vulcan/cases/: greeter.go  login.go
golang/cloud/test/vulcan/utils/: file.go
protocol/: BUILD
protocol/proto/server/: code.proto  cs_hello.proto  cs_login.proto  db_player.proto  rpc.proto  ss_chat.proto
scripts/python/: log.py  requirements.txt  util.py
scripts/shell/: gen_proto.sh  iwyu.sh  mongo_cpp_diver.sh
servers/chatsvr/: BUILD  CMakeLists.txt
servers/chatsvr/src/: chat_server.cpp  chat_server.h  main.cpp  ss_chat_service_impl.cpp  ss_chat_service_impl.h
servers/client/: CMakeLists.txt  main.cpp
servers/gamesvr/: BUILD  CMakeLists.txt
servers/gamesvr/src/: game_rpc_object.cpp  game_rpc_object.h  game_server.cpp  game_server.h  main.cpp  player.h
servers/gamesvr/src/echo/: chat_logic.h  cs_echo_service_impl.cpp  cs_echo_service_impl.h
servers/gamesvr/src/login/: cs_login_service_impl.cpp  cs_login_service_impl.h
servers/grpc_server/: CMakeLists.txt  main.cpp
servers/zmq_client/: CMakeLists.txt  main.cpp
servers/zmq_server/: CMakeLists.txt  main.cpp
tests/: CMakeLists.txt  test_main.cpp
tests/src/: test_log.h  test_mongo.h  test_redis.h  test_uid.h
